[tool:pytest]
testpaths = "mastquery"
astropy_header = true
doctest_plus = disabled
text_file_format = rst

[ah_bootstrap]
auto_use = True

[metadata]
package_name = mastquery
description = Python tools for querying the MAST Archive
author = G. Brammer
license = MIT
url = https://github.com/gbrammer/mastquery
edit_on_github = False
github_project = gbrammer/mastquery
description-file = README.md

[entry_points]
