[tool:pytest]
testpaths = "mastquery/tests"

[metadata]
package_name = mastquery
description = Python tools for querying the MAST Archive
author = G. Brammer
license = MIT
license_files = LICENSE.txt
url = https://github.com/gbrammer/mastquery
edit_on_github = False
github_project = gbrammer/mastquery
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/gbrammer/mastquery
    Tracker = https://github.com/gbrammer/mastquery/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
install_requires = 
    tqdm
    lxml
    numpy
    astropy
    astroquery
    geos
    shapely
    matplotlib
    pyyaml
    scikit-image
    sregion>=1.2.2
    pysiaf

[options.extras_require]
test =
    pytest>=5.1
    flake8
aws = 
    boto3
    awscli